# dcc-controller-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
hardware/dcc-controller/: DRV8231DSGR.kicad_sym  DRV8231DSGR.lib  VXO7803-500.kicad_sym  dcc-controller.kicad_pcb  dcc-controller.kicad_prl  dcc-controller.kicad_pro  dcc-controller.kicad_sch  fp-lib-table  ssd1306-display.kicad_sym  stm32f103c6t6-blue-pill.kicad_sym  sym-lib-table
hardware/dcc-controller/automotive-fuse-mount.pretty/: automotive-fuse-mount.kicad_mod
hardware/dcc-controller/dp3t.pretty/: dp3t.kicad_mod
hardware/dcc-controller/gerbers/: dcc-controller-B_Cu.gbr  dcc-controller-B_Mask.gbr  dcc-controller-B_Paste.gbr  dcc-controller-B_Silkscreen.gbr  dcc-controller-Edge_Cuts.gbr  dcc-controller-F_Cu.gbr  dcc-controller-F_Mask.gbr  dcc-controller-F_Paste.gbr  dcc-controller-F_Silkscreen.gbr  dcc-controller-NPTH.drl  dcc-controller-PTH.drl  dcc-controller-job.gbrjob
hardware/dcc-controller/potentiometer.pretty/: potentiometer vertical.kicad_mod
hardware/dcc-controller/spdt-slide-switch.pretty/: spdt-slide-switch.kicad_mod
hardware/dcc-controller/ssd1306-display.pretty/: ssd1306-display.kicad_mod
hardware/dcc-controller/stm32f103c6t6-blue-pill.pretty/: stm32-blue-pill.kicad_mod
src/: address_switches.rs  main.rs
