[package]
name = "dcc-controller-rs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcc-rs = { version = "0.3", features = ["use-defmt"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-graphics = "0.7"
embedded-hal = { version = "0.2", features = ["unproven"] }
nb = "1"
ssd1306 = "0.7"

[dependencies.stm32f1xx-hal]
version = "0.9"
features = ["stm32f103", "medium"] # replace the model of your microcontroller here

[profile.release]
debug = 2
